# ReportMaker

./: .gitignore  README.md  pyproject.toml  pytest.ini  report_maker.py  requirements.txt  settings.json  tr.ipynb
Docs/: Proj.md  Report_struct.md  Settings.md  tr.ipynb
Docs/Base/DailyBase/: 2022-12-27.md  2022-12-31.md
Docs/OldReleases/ReportMaker_0.1/: agregator.py  analyzer.py  manager.py  visualizer.py  (+1 more)
Docs/Проектирование/: .$MindMap.drawio.bkp  MindMap.drawio  MindMap.vsdx  Project.xlsx  Исходные данные.xlsx  Процесс.archimate.bak
OldReleases/ReportMaker_0.1/: parser.py  parser_tester.py  setting.ini  settings.py  tryer.ipynb
common/: control.py  worker.py
export/: exporter.py
prepare/: cl_parser.py  scenario.py  settings.py  task.py
report/: aggregated.py  detailed.py  etl.py  links.py  metadata.py  period.py  source.py  title.py
src/: __init__.py  for_debug.py  repmaker.py
src/common/: complainer.py  control.py  worker.py
src/export/: exporter.py
src/prepare/: cl_parser.py  scenario.py  settings.json  settings.py  task.py
src/report/: etl.py  links.py  metadata.py  period.py  source.py
tests/test_dates/: conftest.py  test_data_right.py  test_dates.py
tests/test_etl/: test_extract.py  test_pom_complain.py  test_transform.py
tests/test_release/: conftest.py  test_version.py
tests/test_settings/: conftest.py  test_settings.py
tests/testdata/: dateinputs.xlsx
Проектирование/: .$MindMap.drawio.bkp  .$MindMap.drawio.dtmp  MindMap.drawio  Исходные данные.xlsx  Процесс.archimate  Процесс.archimate.bak  Шаблон периодического отчета.txt
(+25 files in other folders)
