[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "report_maker"
version = "2.3.0"
dependencies = [
    "anytree>=2.8.0",
    "attrs>=22.2.0",
    "build>=0.10.0",
    "certifi>=2022.12.7",
    "charset-normalizer>=3.0.1",
    "colorama>=0.4.6",
    "coverage>=7.1.0",
    "et-xmlfile>=1.1.0",
    "idna>=3.4",
    "iniconfig>=2.0.0",
    "numpy>=1.24.1",
    "openpyxl>=3.0.10",
    "packaging>=23.0",
    "pandas>=1.5.3",
    "pipdeptree>=2.3.3",
    "pluggy>=1.0.0",
    "pyproject_hooks>=1.0.0",
    "pytest>=7.2.1",
    "pytest-cov>=4.0.0",
    "python-dateutil>=2.8.2",
    "pytz>=2022.7.1",
    "requests>=2.28.2",
    "six>=1.16.0",
    "urllib3>=1.26.14"

]

[project.scripts]
repmaker = "repmaker:main"
